--- a/bfx-bwa/Dockerfile
+++ b/bfx-bwa/Dockerfile
@@ -2,11 +2,11 @@ FROM ubuntu:12.04
 
 MAINTAINER Allen Day "allenday@allenday.com"
 
-ENV IMAGE_PACKAGES="samtools"
+ENV IMAGE_PACKAGES="samtools picard-tools"
 ENV BUILD_PACKAGES="make gcc wget zlib1g-dev"
 
 RUN apt-get -y update
-RUN apt-get -y install $BUILD_PACKAGES $IMAGE_PACKAGES
+RUN apt-get -y --no-install-recommends install $BUILD_PACKAGES $IMAGE_PACKAGES
 
 WORKDIR /tmp
 RUN wget --no-check-certificate https://github.com/lh3/bwa/archive/v0.7.15.tar.gz
