--- a/bfx-bwa/pipeline-bwa-mem.yaml
+++ b/bfx-bwa/pipeline-bwa-mem.yaml
@@ -14,7 +14,7 @@ outputParameters:
 - name: OUTPUT_PATH
   localCopy:
     disk: datadisk
-    path: bwa-output.bam*
+    path: bwa-out/bwa-output.bam*
 resources:
   minimumCpuCores: 4
   minimumRamGb: 10
@@ -30,4 +30,4 @@ resources:
     mountPoint: /mnt/datadisk
 docker:
   imageName: registry.hub.docker.com/allenday/bfx-bwa
-  cmd: "mkdir /mnt/datadisk/bwa-out && bwa mem -t 4 /mnt/datadisk/bwa-index/${PREFIX} ${FASTQ_PATH} > /mnt/datadisk/bwa-out/tmp.sam && samtools view -S /mnt/datadisk/bwa-out/tmp.sam -b > /mnt/datadisk/bwa-out/tmp.bam && samtools sort /mnt/datadisk/bwa-out/tmp.bam /mnt/datadisk/bwa-out/bwa-output && samtools index /mnt/datadisk/bwa-out/bwa-output.bam && rm -vf /mnt/datadisk/bwa-out/tmp*"
+  cmd: "mkdir /mnt/datadisk/bwa-out && bwa mem -t 4 /mnt/datadisk/bwa-index/${PREFIX} ${FASTQ_PATH} > /mnt/datadisk/bwa-out/tmp.sam && samtools view -S /mnt/datadisk/bwa-out/tmp.sam -b > /mnt/datadisk/bwa-out/tmp.bam && samtools sort /mnt/datadisk/bwa-out/tmp.bam /mnt/datadisk/bwa-out/sorted && picard samtools index /mnt/datadisk/bwa-out/bwa-output.bam && rm -vf /mnt/datadisk/bwa-out/tmp*"
